k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: acrm7develop.azurecr.io/fortune-backend-rust:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
