k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  elector:
    pp: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
type: ClusterIP
